# supertonic3-mcp

./: .gitignore  LICENSE  README.md  glama.json  plan.md  pyproject.toml
benchmark/: results.md  run.py
notes/: spike-result.md
supertonic3_mcp/: __init__.py  __main__.py  audio.py  errors.py  lang.py  server.py  tts.py
tests/: conftest.py  test_audio.py  test_errors.py  test_lang.py  test_server.py  test_tts.py
