[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supertonic3-mcp"
version = "0.1.0"
description = "MCP server for Supertonic 3 on-device text-to-speech"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Community" }]
keywords = ["mcp", "tts", "supertonic", "speech"]
dependencies = [
    "supertonic>=1.3.0",
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
supertonic3-mcp = "supertonic3_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["supertonic3_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
